<resources>
    <string name="products_sucсessfully_downloaded">Товары в количестве %1$s успешно загружены</string>
    <string name="cells_sucсessfully_downloaded">Ячейки в количестве %1$s успешно загружены</string>
    <string name="import_stockcells_message">При загрузке ячеек и складов задания будут очищены</string>
    <string name="clear_shipments_message">Удалить все задания?</string>
    <string name="app_name">ТСД Яршинторг</string>
    <string name="createproduct">Create product</string>
    <string name="toPreferences">Настройки</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <!-- <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array> -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="generateStoragesAndCells">Загрузить склады и ячейки</string>
    <string name="generateProducts">Загрузить товары</string>
    <string name="multiselectStorages">Склады</string>
    <string name="hint_search">Поиск</string>
    <string name="importShipments">Загрузить задания</string>
    <string name="shipments">Задания на отгрузку</string>
    <string name="btnScanBarCode">Scan</string>
    <string name="btnShowProductOnStocks">показать на складах</string>
    <string name="doOKAndToNext">OK</string>
    <string name="doCancel">Отмена</string>
    <string name="refresh">Загрузить</string>
    <string name="loadtodatabase">Загрузить</string>
    <string name="stockcells">Ячейки</string>
    <string name="Products">Товары</string>
    <string name="downloadcomplete">Загрузка завершена</string>
    <string name="cell">Ячейка</string>
    <string name="Quantity">Количество</string>
    <string name="Rest">Остаток</string>
    <string name="Queue">Очередь</string>
    <string name="newShipmentsWereAdded">Новые задания были загружены</string>
    <string name="newOrderWasAdded">Новый заказ был загружен</string>
    <string name="ShipmentNumber">Задание №</string>
    <string name="cell_read">Ячейка считана</string>
    <string name="product_read">Товар считан</string>
    <string name="products_shouldbe_equal">Считанный код товара и код в задании должны быть одинаковы</string>
    <string name="shipments_are_being_downloaded">Идет загрузка заданий ...</string>
    <string name="shipment_is_being_uploaded">Задание выгружается в 1С ...</string>
    <string name="products_are_being_downloaded">Идет загрузка товаров ...</string>
    <string name="stockcells_are_being_downloaded">Идет загрузка ячеек и складов ...</string>
    <string name="clear">Очистить</string>
    <string name="clear_all_strings">Очистить все строки?</string>
    <string name="summary_selected_storages">Загрузка заданий только по выбранным складам</string>
    <string name="filter_selected_storages">Отбор по выбранным складам</string>
    <string name="yourName">Ваше имя</string>
    <string name="enterYourName">Введите ваше имя</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="dictionaries">Справочники</string>
    <string name="picture_of_product">Фото товара</string>
    <string name="show_picture">Показать фото</string>
    <string name="tyre">шины</string>
    <string name="disk">диски</string>
    <string name="akb">аккумулятор</string>
    <string name="accr">аксессуар</string>
    <string name="exit">Выйти</string>
    <string name="uploadTo1S">Выгрузить в 1С</string>
    <string name="delete_shipment_after_upload">Удалять задание после выгрузки в 1С</string>
    <string name="summary_delete_shipment_after_upload">После нажатия кнопки \'Выгрузить\' задание будет автоматически удалено из терминала</string>
    <string name="ordersToSuppliers">Заказы поставщикам</string>
    <string name="transfers">Перемещения</string>
    <string name="transfersInternal">Перемещения внутренние</string>
    <string name="itemsInOrder">Товары в заказе</string>
    <string name="itemsInCells">Товар по ячейкам в заказе</string>
    <string name="ProductCode">Код товара</string>
    <string name="multiselectProductTypes">Типы товаров</string>
    <string name="orderWasUploaded">Заказ был выгружен</string>
    <string name="deleteOrder">Удалить заказ?</string>
    <string name="deleteRow">Удалить строку?</string>
    <string name="title_activity_shipments_tests">ShipmentsTests</string>
    <string name="title_activity_one_product_with_count">OneProductWithCountActivity</string>
    <string name="productswithcounts">Товары с остатками</string>
    <string name="urltoproductphoto">https://terminal.yst.ru/customforpartners/productphoto?productid=</string>
    <string name="inventory">Инвентаризация</string>
</resources>
