<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/firstmenugroup"

        >

        <item
            android:id="@+id/shipments"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/shipments"

            />
        <!--<item
            android:id="@+id/import_shipments"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/importShipments" />
        <item
            android:id="@+id/clear"
            android:icon="@drawable/ic_menu_clear"
            android:title="@string/clear" /> -->
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ordersToSuppliers" />
       <item
            android:id="@+id/productwithcount"
            android:title="@string/productswithcounts"
            android:icon="@drawable/ic_menu_gallery"
            />

        <item
            android:id="@+id/transfer"
            android:icon="@drawable/ic_chevron_right_black_24dp"
            android:title="@string/transfers" />

        <item
            android:id="@+id/transferInternal"
            android:icon="@drawable/ic_chevron_right_black_24dp"
            android:title="@string/transfersInternal" />
        <item
            android:id="@+id/inventory"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/inventory" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/thirdmenugroup">
      <item
            android:id="@+id/toProducts"
            android:icon="@drawable/tire"
            android:title="@string/Products" />
        <item
            android:id="@+id/toStockCells"
            android:icon="@drawable/ic_grid_on_black_24dp"
            android:title="@string/stockcells" />

        <item
            android:id="@+id/toPreferences"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/toPreferences" />
   </group>
    <group android:checkableBehavior="single"
        android:id="@+id/secondmenugroup">
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>

   <!-- <item android:title="@string/dictionaries">
        <menu>
            <item
                android:id="@+id/toProducts"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Products" />
            <item
                android:id="@+id/toStockCells"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/stockcells" />
        </menu>
    </item> -->

</menu>
