<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/search"
        android:title="@string/hint_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/toPreferences"
        android:orderInCategory="100"
        android:title="@string/toPreferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/refresh"
        android:orderInCategory="50"
        android:title="@string/refresh"
        app:showAsAction="never" />
  <!-- <item
        android:id="@+id/load_entities"
        android:orderInCategory="80"
        android:title="@string/loadtodatabase"
        app:showAsAction="never" /> -->
    <item
        android:id="@+id/toStockCells"
        android:orderInCategory="60"
        android:title="@string/stockcells"
        app:showAsAction="never" />
    <item
        android:id="@+id/toProducts"
        android:orderInCategory="60"
        android:title="@string/Products"
        app:showAsAction="never" />

</menu>