<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/yourName"
        android:key="username"
        android:summary="@string/enterYourName"></EditTextPreference>
    <CheckBoxPreference android:title="@string/filter_selected_storages"
        android:defaultValue="false"
        android:summary="@string/summary_selected_storages"
        android:key="onlySelectedStorages" />
    <!--<CheckBoxPreference android:title="Application Updates"
        android:defaultValue="false"
        android:summary="This option if selected will allow the application to check for latest versions."
        android:key="applicationUpdates" />
    <ListPreference     android:title="Download Details"
        android:summary="Select the kind of data that you would like to download"
        android:key="downloadType"
        android:defaultValue="1"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues" /> -->
    <MultiSelectListPreference
        android:title="@string/multiselectStorages"
        android:entries="@array/storagesArray"
        android:entryValues="@array/storagesArray"
        android:summary=""
        android:key="storagesArray"
        />
</PreferenceScreen>