<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoadEntitiesActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinId"
        android:orientation="horizontal">

        <Button android:layout_height="60dp"
            android:id="@+id/btnGenerateStoragesAndCells"
            android:layout_width="match_parent"
            android:text="@string/generateStoragesAndCells"
            android:onClick="importAllStoragesAndCells"
            android:layout_weight="1">

        </Button>
        <Button android:layout_height="60dp"
            android:id="@+id/btnGenerateProducts"
            android:layout_width="match_parent"
            android:text="@string/generateProducts"
            android:onClick="importAllProducts"
            android:layout_weight="1">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinId2"
        android:orientation="horizontal"
        android:layout_below="@id/LinId"
        android:layout_marginTop="30dp"
        >
         <Button android:layout_height="60dp"
           android:id="@+id/btnImportShipments"
           android:layout_width="match_parent"
           android:text="@string/importShipments"
           android:onClick="importShipments">

       </Button>
        </LinearLayout>
    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        style="?android:attr/progressBarStyleHorizontal">
    </ProgressBar>
    </RelativeLayout>
</RelativeLayout>
