<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yst.sklad.tsd.activities.OneShipmentItemActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/caption"
    android:layout_marginBottom="10dp">
    <TextView
        android:id="@+id/tv_RowNumber"
        android:layout_width="0dp"
        android:textSize="@dimen/textview_height"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="num"
        />
    <TextView
        android:id="@+id/tv_ProductId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="@dimen/textview_height"
        android:linksClickable="false"
        android:autoLink="all"
        android:text="productId"
        android:onClick="onClickProductid"
        android:textColor="@color/contents_text"/>

    <TextView
        android:id="@+id/tv_Article"
        android:layout_width="0dp"
        android:textSize="@dimen/textview_height"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="article"
        android:layout_marginLeft="20px"
        />

    </LinearLayout>

    <TextView
        android:layout_below="@id/caption"
        android:id="@+id/tvProductName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cellFact"
        android:layout_below="@id/tvProductName">
        <TextView
            android:id="@+id/tv_CellCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cell"/>

        <EditText
            android:id="@+id/et_Cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/tv_Storage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cellQuantity"
        android:layout_below="@id/cellFact">
        <TextView
            android:id="@+id/tv_QuantityCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Quantity"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/et_QuantityFact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/tv_QuantityPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:layout_weight="1"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:id="@+id/cellRest"
        android:layout_below="@id/cellQuantity">
        <TextView
            android:id="@+id/tv_RestCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Rest"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_Rest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/cellQueue"
        android:layout_below="@id/cellRest"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tv_QueueCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Queue"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_Queue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linButtons"
        android:layout_below="@id/cellQueue"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnScanBarCode"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="scanBarCode"
            android:text="@string/btnScanBarCode" />

        <Button
            android:id="@+id/btnOKAndToNext"
            android:theme="@style/AppTheme.BtnPrimary"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="doOKAndToNext"
            android:text="@string/doOKAndToNext" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linWhereIsProduct"
        android:layout_below="@id/linButtons"
        android:layout_marginTop="50dp">
      <!--  <Button android:layout_height="60dp"
            android:id="@+id/btnShowProductOnStocks"
            android:layout_width="0dp"
            android:text="@string/btnShowProductOnStocks"
            android:onClick="showProductOnStocks"
            android:layout_weight="1"
            /> -->

        <TextView
            android:id="@+id/btnShowProductOnStocks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autoLink="all"
            android:linksClickable="false"
            android:onClick="showProductOnStocks"
            android:text="@string/btnShowProductOnStocks"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="@dimen/textview_height" />

    </LinearLayout>
</RelativeLayout>
