<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yst.sklad.tsd.activities.OneInventoryItemActivity">


    <TextView
        android:id="@+id/tv_ProductName"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:textSize="16sp"
        android:layout_marginBottom="20px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_ProductName"
        android:id="@+id/ProductIdFields">

        <TextView
            android:id="@+id/tv_ProductCaption"
            android:layout_width="0dp"
            android:layout_marginLeft="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ProductCode"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_ProductId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="number"
            android:textSize="16sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_cellFieldsFrom"
        android:layout_below="@id/ProductIdFields">

        <TextView
            android:id="@+id/tv_CellCaptionFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="2"
            android:text="Ячейка из"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_CellFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="number"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_cellNameFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_cellFieldsTo"
        android:layout_below="@id/ll_cellFieldsFrom">

        <TextView
            android:id="@+id/tv_CellCaptionTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Ячейка в"
            android:layout_marginLeft="2dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_CellTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="number"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_cellNameTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cellQuantity"
        android:layout_below="@id/ll_cellFieldsTo">
        <TextView
            android:id="@+id/tv_QuantityCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Quantity"
            android:layout_weight="2"
            android:layout_marginLeft="2dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/et_QuantityFact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_weight="4"
            android:textSize="16sp"/>
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:layout_weight="2"
            android:textSize="16sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linButtons"
        android:layout_marginTop="50dp"
        android:layout_below="@id/cellQuantity">

        <Button android:layout_height="60dp"
            android:id="@+id/btnOKAndToNext"
            android:layout_width="0dp"
            android:text="@string/doOKAndToNext"
            android:onClick="doOKAndToNext"
            android:layout_weight="1"/>
        <Button android:layout_height="60dp"
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:text="@string/doCancel"
            android:onClick="doCancel"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
